--- a/app/src/main/res/layout/activity_fawry.xml
+++ b/app/src/main/res/layout/activity_fawry.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    tools:context=".Fawry">
 
     <ImageButton
         android:id="@+id/backButton"
@@ -19,10 +20,11 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/fawry_pic"
+        android:id="@+id/paymentpic"
         android:layout_width="wrap_content"
         android:layout_height="300dp"
         android:padding="5dp"
+        android:elevation="3dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,18 +40,18 @@
         android:text="Fawry Payment"
         android:textColor="#000000"
         android:textSize="17sp"
-        app:layout_constraintTop_toBottomOf="@+id/fawry_pic"
+        app:layout_constraintTop_toBottomOf="@+id/paymentpic"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <EditText
-        android:id="@+id/card_name"
+        android:id="@+id/fawrycode1"
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/edittext_bg"
         android:hint="Please Enter your code here"
-        android:inputType="textPersonName"
+        android:inputType="phone"
         android:lines="1"
         android:maxLines="1"
         android:paddingLeft="15dp"
@@ -58,7 +60,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <EditText
-        android:id="@+id/card_number"
+        android:id="@+id/fawrycode2"
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginTop="16dp"
@@ -69,7 +71,7 @@
         android:maxLength="19"
         android:maxLines="1"
         android:paddingLeft="15dp"
-        app:layout_constraintTop_toBottomOf="@+id/card_name"
+        app:layout_constraintTop_toBottomOf="@+id/fawrycode1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -83,7 +85,7 @@
         android:text="Confirm Payment"
         android:textColor="@android:color/white"
         android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@+id/card_number"
+        app:layout_constraintTop_toBottomOf="@+id/fawrycode2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
@@ -101,7 +103,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/card_number"
+        app:layout_constraintTop_toBottomOf="@+id/fawrycode2"
         app:layout_constraintVertical_bias="0.736" />
 
 
