--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -12,7 +12,7 @@
         android:text="Payment Method"
         android:textSize="20sp"
         android:textColor="#063970"
-        app:layout_constraintBottom_toTopOf="@+id/fawry_pic"
+        app:layout_constraintBottom_toTopOf="@+id/paymentpic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -30,10 +30,11 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/fawry_pic"
+        android:id="@+id/paymentpic"
         android:layout_width="wrap_content"
         android:layout_height="300dp"
         android:padding="5dp"
+        android:elevation="5dp"
         android:layout_marginTop="70dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,7 +54,7 @@
         app:layout_constraintBottom_toTopOf="@+id/btnPayWithCard"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fawry_pic" />
+        app:layout_constraintTop_toBottomOf="@+id/paymentpic" />
 
     <TextView
         android:id="@+id/btnPayWithCard"
@@ -69,7 +70,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fawry_pic"
+        app:layout_constraintTop_toBottomOf="@+id/paymentpic"
         tools:srcCompat="@drawable/button" />
 
 
